--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,6 @@
                     <option value="6"><p>Кислотный тоник SPINACH</p></option>
                     <option value="12"><p>Успокаивающий тоник</p></option>
                     <option value="8"><p>Антивозрастной тоник PEONY</p></option>
-                    
                     <option value="10"><p>Гидрофильное масло для снятия макияжа</p></option>
                     <option value="11"><p>Скраб-маска YGOLЬ SODA</p></option>
                     
@@ -72,10 +71,10 @@
                 <div id="rateProd"></div>
                 <div class="name">
                     <div class="flex_inpyt">
-                        <textarea type="text" name="pos" id="pos" oninput="autoResize(this)" placeholder="Достоинства"></textarea>
+                        <textarea type="text" name="pos" id="pos" oninput="autoResize(this)" placeholder="Достоинства *"></textarea>
                     </div>
                     <div class="flex_inpyt">
-                        <textarea type="text" name="neg" id="neg" oninput="autoResize(this)" placeholder="Недостатки"></textarea>
+                        <textarea type="text" name="neg" id="neg" oninput="autoResize(this)" placeholder="Недостатки *"></textarea>
                     </div>
                     <div class="flex_inpyt">
                         <textarea type="text" name="rewue" id="rewue" oninput="autoResize(this)" placeholder="Комментарий"></textarea>
