--- a/static/css/index.css
+++ b/static/css/index.css
@@ -172,7 +172,7 @@ p ,.item ,.option , textarea{
     padding: 20px 16px;
     background: #FFFFFF;    
     border-radius: 12px;
-    border: none !important;
+    border: none;
     font-size: 16px;
     margin-bottom: 12px;
     resize: none;
